Bug 210497 - Touchpad stops working after "pinctrl: intel: Disable input and output buffer when switching to GPIO"
Summary: Touchpad stops working after "pinctrl: intel: Disable input and output buffer...
Status: RESOLVED PATCH_ALREADY_AVAILABLE
Alias: None
Product: Drivers
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Andy Shevchenko
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-05 14:26 UTC by Kai-Heng Feng
Modified: 2020-12-09 14:16 UTC (History)
4 users (show)

See Also:
Kernel Version: mainline
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg (77.54 KB, text/plain)
2020-12-05 14:26 UTC, Kai-Heng Feng
Details
dmesg with commit reverted (78.03 KB, text/plain)
2020-12-05 14:26 UTC, Kai-Heng Feng
Details

Description Kai-Heng Feng 2020-12-05 14:26:03 UTC
The platform is Tiger Lake.

After the mentioned commit:
[    2.249086] i2c_designware i2c_designware.1: controller timed out

Reverting the commit can make the touchpad works over I2C bus.
Comment 1 Kai-Heng Feng 2020-12-05 14:26:26 UTC
Created attachment 293947 [details]
dmesg
Comment 2 Kai-Heng Feng 2020-12-05 14:26:47 UTC
Created attachment 293949 [details]
dmesg with commit reverted
Comment 3 Andy Shevchenko 2020-12-06 22:01:42 UTC
This is interesting. I have TGL laptop here and I think touchpad wasn’t working even before that commit. Anyway I will test it next week, thanks for reporting.
Comment 4 Andy Shevchenko 2020-12-07 18:03:44 UTC
Fix has been sent: https://lore.kernel.org/linux-gpio/20201207175940.10631-1-andriy.shevchenko@linux.intel.com/

Thank you for the bisecting, it was really helpful!

Note You need to log in before you can comment on or make changes to this bug.